# dbconfig/OrderReview.js
@@ -1,59 +1,0 @@
-const { DataTypes } = require('sequelize');
-const sequelize = require('./db');
-const Order = require('./Order');
-const User = require('./User');
-
-
-
-const OrderReview = sequelize.define('OrderReview', {
-  ID: {
-    type: DataTypes.BIGINT.UNSIGNED,
-    allowNull: false,
-    autoIncrement: true,
-    primaryKey: true
-  },
-  UserID: {
-    type: DataTypes.BIGINT.UNSIGNED,
-    allowNull: false,
-    references: {
-      model: User,
-      key: 'ID',
-    },
-  },
-  OrderID: {
-    type: DataTypes.BIGINT.UNSIGNED,
-    allowNull: true,
-    references: {
-      model: Order,
-      key: 'ID',
-    },
-  },
-  Rating: {
-    type: DataTypes.INTEGER,
-    allowNull: false,
-    validate: {
-      min: 1,
-      max: 5,
-    },
-  },
-  Review: {
-    type: DataTypes.TEXT,
-    allowNull: true,
-  },
-  CreatedAt: {
-    type: DataTypes.DATE,
-    allowNull: false,
-    defaultValue: DataTypes.NOW
-  },
-  UpdatedAt: {
-    type: DataTypes.DATE,
-    allowNull: false,
-    defaultValue: DataTypes.NOW
-  }
-}, {
-  tableName: 'OrderReview',
-  timestamps: false
-});
-
-
-module.exports = OrderReview;
